SONAR-21174 Fix code smells raised after dropping JDK11 support