@@ -22,7 +22,6 @@ package org.sonar.core.issue.tracking;
 import java.util.Collection;
 import java.util.List;
 import java.util.function.Predicate;
-import java.util.stream.Collectors;
 
 class FilteringBaseInputWrapper<BASE extends Trackable> implements Input<BASE> {
   private final Input<BASE> baseInput;
@@ -33,7 +32,7 @@ class FilteringBaseInputWrapper<BASE extends Trackable> implements Input<BASE> {
     Collection<BASE> baseIssues = baseInput.getIssues();
     this.nonClosedIssues = baseIssues.stream()
       .filter(baseInputFilter)
-      .collect(Collectors.toList());
+      .toList();
   }
 
   @Override
