@@ -22,7 +22,6 @@ package org.sonar.core.platform;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 import javax.annotation.CheckForNull;
 import javax.annotation.Nullable;
 import org.springframework.beans.BeanWrapper;
@@ -45,7 +44,7 @@ public class PriorityBeanFactory extends DefaultListableBeanFactory {
     List<Bean> candidateBeans = candidates.entrySet().stream()
       .filter(e -> e.getValue() != null)
       .map(e -> new Bean(e.getKey(), e.getValue()))
-      .collect(Collectors.toList());
+      .toList();
 
     List<Bean> beansAfterPriority = highestPriority(candidateBeans, b -> getPriority(b.getInstance()));
     if (beansAfterPriority.isEmpty()) {
