@@ -25,7 +25,6 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
-import java.util.stream.Collectors;
 import javax.annotation.CheckForNull;
 import javax.annotation.Nullable;
 import org.apache.commons.io.IOUtils;
@@ -91,7 +90,7 @@ public class SimpleGetRequest extends Request {
       return null;
     }
 
-    return Arrays.stream(value.split(",")).map(String::trim).filter(x -> !x.isEmpty()).collect(Collectors.toList());
+    return Arrays.stream(value.split(",")).map(String::trim).filter(x -> !x.isEmpty()).toList();
   }
 
   @Override
