@@ -27,7 +27,6 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
 import java.util.List;
-import java.util.stream.Collectors;
 import javax.annotation.Nullable;
 import org.apache.commons.lang.ClassUtils;
 import org.sonar.api.batch.DependedUpon;
@@ -103,7 +102,7 @@ public abstract class AbstractExtensionDictionary {
 
     return (Collection<T>) sortedList.stream()
       .filter(extensions::contains)
-      .collect(Collectors.toList());
+      .toList();
   }
 
   /**
