@@ -19,11 +19,9 @@
  */
 package org.sonarqube.ws.tester;
 
-import com.google.common.collect.ImmutableSet;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 import javax.annotation.Nullable;
 import org.sonarqube.ws.Settings;
@@ -38,7 +36,7 @@ import static java.util.Arrays.asList;
 
 public class SettingTester {
 
-  private static final Set<String> EMAIL_SETTINGS = ImmutableSet.of("email.smtp_host.secured", "email.smtp_port.secured", "email.smtp_secure_connection.secured",
+  private static final Set<String> EMAIL_SETTINGS = Set.of("email.smtp_host.secured", "email.smtp_port.secured", "email.smtp_secure_connection.secured",
     "email.smtp_username.secured", "email.smtp_password.secured", "email.from", "email.prefix");
 
   private final TesterSession session;
@@ -59,7 +57,7 @@ public class SettingTester {
         .map(Settings.Definition::getKey)
         .filter(key -> !key.equals(Tester.FORCE_AUTHENTICATION_PROPERTY_NAME)),
       EMAIL_SETTINGS.stream())
-      .collect(Collectors.toList());
+      .toList();
     session.wsClient().settings().reset(new ResetRequest().setKeys(settingKeys));
   }
 
